--- a/Pages/ManageSupplier.cshtml
+++ b/Pages/ManageSupplier.cshtml
@@ -112,7 +112,7 @@
     <div class="table-settings mb-4">
         <form method="post" asp-page-handler="Search" class="row align-items-center">
             
-            <div class="col col-md-6 col-lg-3 col-xl-4">
+            <div class="col col-md-3 col-lg-3 col-xl-3">
                 <div class="input-group me-2 me-lg-3 fmxw-400">
                     <span class="input-group-text">
                         <svg class="icon icon-xs" x-description="Heroicon name: solid/search"
@@ -125,6 +125,39 @@
                     <input type="text" name="SupplierName" class="form-control" placeholder="@Model.lblSuplierName" value="@Model.SupplierName">
                 </div>
             </div>
+            <div class="col col-md-3 col-lg-3 col-xl-3">
+                <div class="input-group me-2 me-lg-3 fmxw-400">
+                    <span class="input-group-text">
+                        <svg class="icon icon-xs" x-description="Heroicon name: solid/search"
+                            xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
+                            <path fill-rule="evenodd"
+                                d="M8 4a4 4 0 100 8 4 4 0 000-8zM2 8a6 6 0 1110.89 3.476l4.817 4.817a1 1 0 01-1.414 1.414l-4.816-4.816A6 6 0 012 8z"
+                                clip-rule="evenodd"></path>
+                        </svg>
+                    </span>
+                    <input type="text" name="CoordinatorName" class="form-control" placeholder="@Model.lblCoordinatorName" value="@Model.CoordinatorName">
+                </div>
+            </div>
+            <div class="col col-md-3 col-lg-3 col-xl-3">
+                <div class="input-group me-2 me-lg-3 fmxw-400">
+                    <span class="input-group-text">
+                        <svg class="icon icon-xs" x-description="Heroicon name: solid/search"
+                            xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
+                            <path fill-rule="evenodd"
+                                d="M8 4a4 4 0 100 8 4 4 0 000-8zM2 8a6 6 0 1110.89 3.476l4.817 4.817a1 1 0 01-1.414 1.414l-4.816-4.816A6 6 0 012 8z"
+                                clip-rule="evenodd"></path>
+                        </svg>
+                    </span>
+                    <select name="SupplierType" class="form-control">
+                        <option value="">@Model.lblSupplierType</option>
+                        <option value="Internal" selected="@(Model.SupplierType == "Internal")">Internal</option>
+                        <option value="External" selected="@(Model.SupplierType == "External")">External</option>
+                    </select>
+
+
+                </div>
+            </div>
+
             <div class="col-4 col-md-2 col-xl-1 ps-md-0 text-end">
                 <button type="submit" class="btn btn-primary">@Model.lblSubmit</button>
             </div>
@@ -143,7 +176,7 @@
                         {
                         
                             <li class="page-item">
-                                <a class="page-link" href="?page=@(Model.CurrentPage - 1)&SupplierName=@Model.SupplierName">&laquo;</a>
+                                <a class="page-link" href="?page=@(Model.CurrentPage - 1)&SupplierName=@Model.SupplierName&SupplierType=@Model.SupplierType">&laquo;</a>
                             </li>
                         }
 
@@ -153,7 +186,7 @@
                             @for (int i = 1; i <= Model.TotalPages; i++)
                             {
                                 <li class="page-item @(i == Model.CurrentPage ? "active" : "")">
-                                    <a class="page-link" href="?page=@i&SupplierName=@Model.SupplierName">@i</a>
+                                    <a class="page-link" href="?page=@i&SupplierName=@Model.SupplierName&SupplierType=@Model.SupplierType">@i</a>
                                 </li>
                             }
                         }
@@ -163,7 +196,7 @@
                             @if (Model.CurrentPage > 3)
                             {
                                 <li class="page-item">
-                                    <a class="page-link" href="?page=1&SupplierName=@Model.SupplierName">1</a>
+                                    <a class="page-link" href="?page=1&SupplierName=@Model.SupplierName&SupplierType=@Model.SupplierType">1</a>
                                 </li>
                                 <li class="page-item disabled">
                                     <span class="page-link">...</span>
@@ -174,7 +207,7 @@
                             @for (int i = Math.Max(1, Model.CurrentPage - 1); i <= Math.Min(Model.TotalPages, Model.CurrentPage + 1); i++)
                             {
                                 <li class="page-item @(i == Model.CurrentPage ? "active" : "")">
-                                    <a class="page-link" href="?page=@i&SupplierName=@Model.SupplierName">@i</a>
+                                    <a class="page-link" href="?page=@i&SupplierName=@Model.SupplierName&SupplierType=@Model.SupplierType">@i</a>
                                 </li>
                             }
 
@@ -190,7 +223,7 @@
                             @if (Model.CurrentPage < Model.TotalPages - 2)
                             {   
                                 <li class="page-item">
-                                    <a class="page-link" href="?page=@Model.TotalPages&SupplierName=@Model.SupplierName">@Model.TotalPages</a>
+                                    <a class="page-link" href="?page=@Model.TotalPages&SupplierName=@Model.SupplierName&SupplierType=@Model.SupplierType">@Model.TotalPages</a>
                                 </li>
                             }
                         }
@@ -199,7 +232,7 @@
                         @if (Model.CurrentPage < Model.TotalPages)
                         {
                             <li class="page-item">
-                                <a class="page-link" href="?page=@(Model.CurrentPage + 1)&SupplierName=@Model.SupplierName">&raquo;</a>
+                                <a class="page-link" href="?page=@(Model.CurrentPage + 1)&SupplierName=@Model.SupplierName&SupplierType=@Model.SupplierType">&raquo;</a>
                             </li>
                         
                         }
@@ -265,7 +298,7 @@
                 {
                    
                     <li class="page-item">
-                        <a class="page-link" href="?page=@(Model.CurrentPage - 1)&SupplierName=@Model.SupplierName">&laquo;</a>
+                        <a class="page-link" href="?page=@(Model.CurrentPage - 1)&SupplierName=@Model.SupplierName&SupplierType=@Model.SupplierType">&laquo;</a>
                     </li>
                 }
 
@@ -275,7 +308,7 @@
                     @for (int i = 1; i <= Model.TotalPages; i++)
                     {
                         <li class="page-item @(i == Model.CurrentPage ? "active" : "")">
-                            <a class="page-link" href="?page=@i&SupplierName=@Model.SupplierName">@i</a>
+                            <a class="page-link" href="?page=@i&SupplierName=@Model.SupplierName&SupplierType=@Model.SupplierType">@i</a>
                         </li>
                     }
                 }
@@ -285,7 +318,7 @@
                     @if (Model.CurrentPage > 3)
                     {
                         <li class="page-item">
-                            <a class="page-link" href="?page=1&SupplierName=@Model.SupplierName">1</a>
+                            <a class="page-link" href="?page=1&SupplierName=@Model.SupplierName&SupplierType=@Model.SupplierType">1</a>
                         </li>
                         <li class="page-item disabled">
                             <span class="page-link">...</span>
@@ -296,7 +329,7 @@
                     @for (int i = Math.Max(1, Model.CurrentPage - 1); i <= Math.Min(Model.TotalPages, Model.CurrentPage + 1); i++)
                     {
                         <li class="page-item @(i == Model.CurrentPage ? "active" : "")">
-                            <a class="page-link" href="?page=@i&SupplierName=@Model.SupplierName">@i</a>
+                            <a class="page-link" href="?page=@i&SupplierName=@Model.SupplierName&SupplierType=@Model.SupplierType">@i</a>
                         </li>
                     }
 
@@ -312,7 +345,7 @@
                     @if (Model.CurrentPage < Model.TotalPages - 2)
                     {   
                         <li class="page-item">
-                            <a class="page-link" href="?page=@Model.TotalPages&SupplierName=@Model.SupplierName">@Model.TotalPages</a>
+                            <a class="page-link" href="?page=@Model.TotalPages&SupplierName=@Model.SupplierName&SupplierType=@Model.SupplierType">@Model.TotalPages</a>
                         </li>
                     }
                 }
@@ -321,7 +354,7 @@
                 @if (Model.CurrentPage < Model.TotalPages)
                 {
                     <li class="page-item">
-                        <a class="page-link" href="?page=@(Model.CurrentPage + 1)&SupplierName=@Model.SupplierName">&raquo;</a>
+                        <a class="page-link" href="?page=@(Model.CurrentPage + 1)&SupplierName=@Model.SupplierName&SupplierType=@Model.SupplierType">&raquo;</a>
                     </li>
                    
                 }
