--- a/Pages/AddDisbursement.cshtml
+++ b/Pages/AddDisbursement.cshtml
@@ -157,41 +157,76 @@
                 <form method="post" class="card-body">
                     <div class="row mb-4">
 
-
-                        <div class="col-lg-12 col-sm-12">
-                            
+                        @* <div class="col-lg-12 col-sm-12">
                             <div class="mb-4">
-                                <label for="RequestingPlace">@Model.lblRequestingPlace</label>
-                                <select class="form-select" id="DId" name="DId">
-                                    @if (Model.Destinations != null)
-                                    {
-                                        foreach (var item in Model.Destinations)
-                                        {
-                                            
-                                                <option value="@item.DId" selected="@(item.DId == Model.DId)">@item.DestinationName</option>
-                                        
-                                        }
-                                    }
+                                <label for="RequestingPlace">ItemGroup/label>
+                                <select class="form-select" name="itemGroup">
+                                    <option value="1">item group1</option>
+                                    <option value="2">item group2</option>
+                                    <option value="3">item group3</option>
                                 </select>
                             </div>
                             <div class="mb-4">
-                                <label for="RequesterName">@Model.lblRequesterName</label>
-
-                                <select class="form-select" id="RequesterName" name="RequesterName"></select>
-
+                                <label for="itemCode">@Model.lblItemCode</label>
+                                <input type="text" class="form-control" id="ItemCode" readonly>
+                            </div>
+                            <div class="mb-4">
+                                <label for="ItemId">@Model.lblItemName (Arabic)</label>
+                                <select class="form-select" id="ItemId" name="ItemId"></select>
+                            </div>
+                            <div class="mb-4">
+                                <label for="ItemId">@Model.lblItemName (English)</label>
+                                <select class="form-select" id="ItemId" name="ItemId"></select>
+                            </div>
+                            <div class="mb-4">
+                                <label for="itemDescription">Item Description</label>
+                                <input type="text" class="form-control" id="ItemDescription" readonly>
+                            </div>
+                            <div class="mb-4">
+                                <label for="typeofAsset">Type of Asset</label>
+                                <input type="text" class="form-control" id="typeofAsset" readonly>
+                            </div>
+                            <div class="mb-4">
+                                <label for="chemical">Chemical</label>
+                                <input type="text" class="form-control" id="chemical" readonly>
+                            </div>
+                            <div class="mb-4">
+                                <label for="RiskRating">Risk Rating</label>
+                                <input type="text" class="form-control" id="RiskRating" readonly>
+                            </div>
+                            <div class="mb-4">
+                                <label for="UnitofMeasure">Unit of Measure</label>
+                                <input type="text" class="form-control" id="UnitofMeasure" readonly>
+                            </div>
+                            <div class="mb-4">
+                                <label for="Quantity">@Model.lblQuantity</label>
+                                <input type="text" name="Quantity" value="@Model.Quantity" class="form-control" id="Quantity">
+                            </div>
+                            <div class="mb-4">
+                                <label for="amountSpent">Amount Spent</label>
+                                <input type="text" name="amountSpent" value="" class="form-control" id="amountSpent">
+                            </div>
+                            <div class="mb-4">
+                                <label for="UnitPrice">Unit Price</label>
+                                <input type="text" name="UnitPrice" value="" class="form-control" id="UnitPrice">
+                            </div>
+                            <div class="mb-4">
+                                <label for="TotalPrice">Total Price</label>
+                                <input type="text" name="TotalPrice" value="" class="form-control" id="TotalPrice">
                             </div>
 
+
+
+                            <div class="mb-4">
+                                <label for="RequesterName">@Model.lblRequesterName</label>
+                                <select class="form-select" id="RequesterName" name="RequesterName"></select>
+                            </div>
                             <div class="mb-4">
                                 <label for="RequestRecievedAt">@Model.lblRequestReceivedDate</label>
-                                <input asp-for="RequestRecievedAt" type="date" class="form-control" name="RequestRecievedAt"
-                                    value="@Model.RequestRecievedAt.ToString("yyyy-MM-dd")" />
-
+                                <input asp-for="RequestRecievedAt" type="date" class="form-control" name="RequestRecievedAt" value="@Model.RequestRecievedAt.ToString("yyyy-MM-dd")" />
                             </div>
-
-
                             <div class="mb-4">
                                 <label class="my-1 me-2" for="Status">@Model.lblDisbursementStatus</label>
-
                                 <select class="form-select" id="Status" name="Status">
                                     @if (Model.StatusList != null)
                                     {
@@ -213,7 +248,6 @@
                                             {
                                                 <option value="@item.StoreId" selected="@(item.StoreId == Model.StoreId)">@item.StoreName</option>
                                             }
-
                                         }
                                     }
                                 </select>
@@ -233,40 +267,111 @@
                             </div>
                             <div class="mb-4">
                                 <label for="Quantity">@Model.lblQuantity</label>
-                                <input type="text" name="Quantity" value="@Model.Quantity" class="form-control"
-                                       id="Quantity">
+                                <input type="text" name="Quantity" value="@Model.Quantity" class="form-control" id="Quantity">
                             </div>
                             <div class="mb-4">
                                 <label for="Comments">@Model.lblComments</label>
-
-                                <input type="text" class="form-control" id="Comments" name="Comments"
-                                    value="@Model.Comments" />
+                                <input type="text" class="form-control" id="Comments" name="Comments" value="@Model.Comments" />
 
                             </div>
                             <div class="mb-4">
                                 <div class="form-check">
-                                    <label class="form-check-label" for="InventoryBalanced">
-                                        @Model.lblInventoryBalanced
-                                    </label>
-                                    <input id="InventoryBalanced" class="form-check-input" type="checkbox"
-                                        name="InventoryBalanced" asp-for="InventoryBalanced">
-
+                                    <label class="form-check-label" for="InventoryBalanced"> @Model.lblInventoryBalanced </label>
+                                    <input id="InventoryBalanced" class="form-check-input" type="checkbox" name="InventoryBalanced" asp-for="InventoryBalanced">
                                 </div>
                             </div>
 
                             <div class="mb-4">
-
-
                                 <div class="d-flex mb-2 mb-md-0" style="gap: 10px">
-                                    <a href="Disbursements"
-                                        class="btn btn-outline-gray-600  align-items-center w-100">@Model.lblCancel</a>
-
-                                    <input type="submit" value="@Model.lblAdd"
-                                        class="btn btn-sm btn-gray-800 align-items-center w-100"
-                                        style="text-align:center;" />
-
+                                    <a href="Disbursements" class="btn btn-outline-gray-600  align-items-center w-100">@Model.lblCancel</a>
+                                    <input type="submit" value="@Model.lblAdd" class="btn btn-sm btn-gray-800 align-items-center w-100" style="text-align:center;" />
                                 </div>
+                            </div>
+                        </div> *@
 
+
+                        <div class="col-lg-12 col-sm-12">
+                            <div class="mb-4">
+                                <label for="RequestingPlace">@Model.lblRequestingPlace</label>
+                                <select class="form-select" id="DId" name="DId">
+                                    @if (Model.Destinations != null)
+                                    {
+                                        foreach (var item in Model.Destinations)
+                                        {
+                                            <option value="@item.DId" selected="@(item.DId == Model.DId)">@item.DestinationName</option>
+                                        }
+                                    }
+                                </select>
+                            </div>
+                            <div class="mb-4">
+                                <label for="RequesterName">@Model.lblRequesterName</label>
+                                <select class="form-select" id="RequesterName" name="RequesterName"></select>
+                            </div>
+                            <div class="mb-4">
+                                <label for="RequestRecievedAt">@Model.lblRequestReceivedDate</label>
+                                <input asp-for="RequestRecievedAt" type="date" class="form-control" name="RequestRecievedAt" value="@Model.RequestRecievedAt.ToString("yyyy-MM-dd")" />
+                            </div>
+                            <div class="mb-4">
+                                <label class="my-1 me-2" for="Status">@Model.lblDisbursementStatus</label>
+                                <select class="form-select" id="Status" name="Status">
+                                    @if (Model.StatusList != null)
+                                    {
+                                        foreach (var item in Model.StatusList)
+                                        {
+                                            <option value="@item.Value">@item.Text</option>
+                                        }
+                                    }
+                                </select>
+                            </div>
+                            <div class="mb-4">
+                                <label for="storeNumber">@Model.lblStoreName</label>
+                                <select class="form-select" id="StoreId" name="StoreId">
+                                    @if (Model.Stores != null)
+                                    {
+                                        foreach (var item in Model.Stores)
+                                        {
+                                            if (item.IsActive == 1 && item.Ended == null)
+                                            {
+                                                <option value="@item.StoreId" selected="@(item.StoreId == Model.StoreId)">@item.StoreName</option>
+                                            }
+                                        }
+                                    }
+                                </select>
+
+                            </div>
+                            <div class="mb-4">
+                                <label for="ItemId">@Model.lblItemName</label>
+                                <select class="form-select" id="ItemId" name="ItemId"></select>
+                            </div>
+                            <div class="mb-4">
+                                <label for="itemCode">@Model.lblItemCode</label>
+                                <input type="text" class="form-control" id="ItemCode" readonly>
+                            </div>
+                            <div class="mb-4">
+                                <label for="itemTypeCode">@Model.lblItemTypeCode</label>
+                                <input type="text" class="form-control" id="ItemTypeCode" readonly>
+                            </div>
+                            <div class="mb-4">
+                                <label for="Quantity">@Model.lblQuantity</label>
+                                <input type="text" name="Quantity" value="@Model.Quantity" class="form-control" id="Quantity">
+                            </div>
+                            <div class="mb-4">
+                                <label for="Comments">@Model.lblComments</label>
+                                <input type="text" class="form-control" id="Comments" name="Comments" value="@Model.Comments" />
+
+                            </div>
+                            <div class="mb-4">
+                                <div class="form-check">
+                                    <label class="form-check-label" for="InventoryBalanced"> @Model.lblInventoryBalanced </label>
+                                    <input id="InventoryBalanced" class="form-check-input" type="checkbox" name="InventoryBalanced" asp-for="InventoryBalanced">
+                                </div>
+                            </div>
+
+                            <div class="mb-4">
+                                <div class="d-flex mb-2 mb-md-0" style="gap: 10px">
+                                    <a href="Disbursements" class="btn btn-outline-gray-600  align-items-center w-100">@Model.lblCancel</a>
+                                    <input type="submit" value="@Model.lblAdd" class="btn btn-sm btn-gray-800 align-items-center w-100" style="text-align:center;" />
+                                </div>
                             </div>
                         </div>
                     </div>
