--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -14,6 +14,17 @@
   <link rel="icon" type="image/x-icon" href="~/images/favicon.png" />
   <link rel="shortcut icon" href="~/images/favicon.png" type="image/x-icon" />
   <link rel="icon" href="~/images/Picture1.png" type="image/x-icon" />
+
+
+
+
+  <!-- jQuery first -->
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+
+  <!-- Then Bootstrap JS -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js"></script>
+
+
     <style>
         .sidebar-rtl {
             right: 0;
@@ -153,8 +164,8 @@
         @if (Model.CanManageItems)
         {
           <li
-            class="nav-item @(Context.Request.Path == "/ItemCards" )">
-                        <a asp-area="" asp-page="/ItemCards" class="nav-link">
+            class="nav-item @(Context.Request.Path == "/ManageItemCards" )">
+                        <a asp-area="" asp-page="/ManageItemCards" class="nav-link">
               <span class="sidebar-icon">
                 <img class="icon icon-xs mx-1" src="images/inventory.png" />
               </span>
