--- a/Pages/ManageItemCards.cshtml
+++ b/Pages/ManageItemCards.cshtml
@@ -17,7 +17,7 @@
                     
                 </ol>
             </nav>
-            <h2 class="h4">@Model.lblAddItemCard</h2>
+            <h2 class="h4">@Model.lblItemCards</h2>
         </div>
         <div class="btn-toolbar mb-2 mb-md-0">
 
