--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -298,7 +298,7 @@
                 <div class="media d-flex align-items-center">
                   <img class="avatar rounded-circle" alt="Image placeholder" src="images/user.png">
                   <div class="media-body mx-2 text-dark align-items-center d-none d-lg-block">
-                                        <span class="mb-0 font-small fw-bold text-secondary">@Model.FullName</span><br /> <span class="mb-0 font-small fw-bold text-secondary">@Model.Usergroup</span>
+                                        <span class="mb-0 font-small fw-bold text-secondary">@Model.FullName</span>
                   </div>
                 </div>
               </a>
