--- a/Pages/ManageItemCards.cshtml
+++ b/Pages/ManageItemCards.cshtml
@@ -44,6 +44,8 @@
                         <tr>
                             <th scope="col" class="border-0 rounded-start">Item Name</th>
                             <th scope="col" class="border-0 rounded-start">Warehouse Name</th>
+                            <th scope="col" class="border-0 rounded-start">Hazard Type</th>
+
 
                             <th scope="col" class="border-0 rounded-end"></th>
                            
@@ -52,8 +54,10 @@
                     <tbody>
            
                     <tr>
-                        <th scope="row">Zinc</th>
-                        <th scope="row">Supply Warehouse</th>
+                        <td scope="row">Zinc</td>
+                        <td scope="row">Supply Warehouse</td>
+                        <td>Non Hazardous</td>
+
 
                         <td>
                             <form method="post">
@@ -70,6 +74,8 @@
                     <tr>
                         <th scope="row">Chlorine</th>
                         <th scope="row">Supply Warehouse</th>
+                        <td>Hazardous</td>
+
 
                         <td>
                             <form method="post">
