--- a/Pages/Requests.cshtml
+++ b/Pages/Requests.cshtml
@@ -1,5 +1,6 @@
 ﻿@page
 @model LabMaterials.Pages.RequestsModel
+@using Microsoft.AspNetCore.Http
 @{
     <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center py-4">
         <div class="d-block mb-4 mb-md-0">
@@ -21,19 +22,30 @@
             <!-- <p class="mb-0">Your web analytics dashboard template.</p>-->
         </div>
 
-        <div class="btn-toolbar mb-2 mb-md-0">
-            <a href="ReceivingReports" class="btn btn-sm justify-content-center btn-gray-800 mx-2 d-inline-flex align-items-center">
-                <img b-ie9pk9zf1q="" class="icon text-white icon-xs mx-2" src="images/plus.png">
-                @Model.lblNewReceivingReport
-            </a>
-        </div>
+        @{
+            var userGroupName = HttpContext.Session.GetString("UserGroup");
+        }
+        @if (userGroupName == "Warehouse Keeper")
+        {
+            <div class="btn-toolbar mb-2 mb-md-0">
+                <a href="ReceivingReports" class="btn btn-sm justify-content-center btn-gray-800 mx-2 d-inline-flex align-items-center">
+                    <img b-ie9pk9zf1q="" class="icon text-white icon-xs mx-2" src="images/plus.png">
+                    @Model.lblNewReceivingReport
+                </a>
+            </div>
+
+        }
     </div>
 
 
 
     <nav class="nav">
         <a class="nav-link @Model.inboxClass border border-bottom-0" href="?type=inbox">Inbox <sup><span class="badge rounded-pill badge-notification bg-danger">2</span></sup></a>
-        <a class="nav-link @Model.outboxClass border border-bottom-0" href="?type=outbox">Request Sent</a>
+        
+        @if (userGroupName == "Warehouse Keeper")
+        {
+            <a class="nav-link @Model.outboxClass border border-bottom-0" href="?type=outbox">Request Sent</a>
+        }
     </nav>
     <div class="card border-0 shadow mb-4">
         <div>
