--- a/Pages/Requests.cshtml
+++ b/Pages/Requests.cshtml
@@ -85,7 +85,7 @@
                                    
                                 </td>
                                 <td>12:35 AM</td>
-                                @* <td><input type="submit" value="@Model.lblView" class="btn btn-secondary" asp-page-handler="View" /></td> *@
+                                <td><input type="submit" value="@Model.lblView" class="btn btn-secondary" asp-page-handler="View" /></td>
                             </tr>
                           
                         }
